--- a/packages/wujie-cli/template/.github/workflows/main.yml
+++ b/packages/wujie-cli/template/.github/workflows/main.yml
@@ -23,8 +23,9 @@ jobs:
           
       - name: install
         run: |
+          npm install
           npm install lerna -g
-          lerna bootstrap --ignore main-react --ignore main-vue --ignore react16 --ignore react17 --ignore vite --ignore vue2 --ignore vue3 --ignore angular12 --ignore wujie-doc --no-ci
+          lerna bootstrap --ignore main-react --ignore main-vue --ignore react16 --ignore react17 --ignore vite --ignore vue2 --ignore vue3 --ignore angular12 --ignore wujie-doc
 
       - name: publish to npm
         run: |
