--- a/packages/wujie-cli/template/examples/main-vue/package.json
+++ b/packages/wujie-cli/template/examples/main-vue/package.json
@@ -1,9 +1,10 @@
 {
   "name": "main-vue",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0-rc.11",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -12,8 +13,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "wujie": "^1.0.0-rc.12",
-    "wujie-vue2": "^1.0.0-rc.12"
+    "wujie": "workspace:*",
+    "wujie-vue2": "workspace:*"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
