--- a/packages/wujie-cli/template/examples/react16/package.json
+++ b/packages/wujie-cli/template/examples/react16/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react16",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0-rc.11",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.19.1",
+    "antd": "4.15.4",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -59,10 +59,11 @@
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1",
-    "wujie-react": "^1.0.0-rc.12"
+    "wujie-react": "workspace:*"
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
