--- a/packages/wujie-cli/template/examples/vue2/package.json
+++ b/packages/wujie-cli/template/examples/vue2/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vue2",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0-rc.9",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve --mode:development",
+    "dev": "vue-cli-service serve --mode:development",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
