--- a/packages/wujie-cli/template/package.json
+++ b/packages/wujie-cli/template/package.json
@@ -3,15 +3,26 @@
   "version": "0.0.0",
   "description": "极致的微前端框架",
   "private": true,
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "scripts": {
-    "start": "lerna run start --parallel",
-    "doc": "lerna run docs:dev",
-    "postinstall": "lerna bootstrap",
+    "start": "turbo run start --parallel --no-cache",
+    "dev": "turbo run dev",
+    "doc": "turbo run docs:dev --filter=wujie-doc",
+    "build": "turbo run build --filter=\"wujie-*\" --filter=wujie",
+    "start:lib": "turbo run start:esm",
     "clean": "rimraf node_modules **/*/node_modules",
-    "test": "lerna run test --scope wujie",
+    "test": "turbo run test",
+    "lint": "turbo run lint --filter wujie",
     "commitlint": "commitlint -E COMMIT_EDITMSG_PATH",
     "husky-commitlint": "commitlint -e",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cs": "changeset",
+    "cs:version": "changeset version",
+    "release": "pnpm build && changeset publish",
+    "version": "changeset version && pnpm install --no-frozen-lockfile"
   },
   "repository": {
     "type": "git",
@@ -20,12 +31,12 @@
   "author": "yiludege",
   "license": "MIT",
   "devDependencies": {
+    "@changesets/cli": "^2.24.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "husky": "^7.0.4",
-    "lerna": "^5.4.3",
     "lint-staged": "^12.4.1",
-    "rimraf": "^3.0.2"
-  },
-  "dependencies": {}
+    "rimraf": "^3.0.2",
+    "turbo": "1.3.2"
+  }
 }
