--- a/packages/wujie-cli/template/packages/wujie-core/package.json
+++ b/packages/wujie-cli/template/packages/wujie-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wujie",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0-rc.11",
   "description": "极致的微前端框架",
   "main": "./lib/index.js",
   "module": "./esm/index.js",
@@ -13,7 +13,8 @@
     "lib": "webpack build --config webpack.config.js",
     "esm": "cross-env BABEL_ENV=esm babel ./src --out-dir ./esm --extensions .ts --source-maps && tsc --emitDeclarationOnly",
     "prepack": "bash build.sh",
-    "start": "cross-env BABEL_ENV=esm babel ./src --out-dir ./esm --extensions .ts --source-maps inline --watch & tsc --emitDeclarationOnly",
+    "start": "cross-env BABEL_ENV=esm babel ./src --out-dir ./esm --extensions .ts --source-maps inline --watch",
+    "build": "cross-env BABEL_ENV=esm babel ./src --out-dir ./esm --extensions .ts --source-maps inline",
     "lint": "eslint --ext .ts ./src  --fix && git add .",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jest -c __test__/unit/jest.config.js",
