--- a/packages/wujie-cli/template/packages/wujie-vue2/package.json
+++ b/packages/wujie-cli/template/packages/wujie-vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wujie-vue2",
-  "version": "1.0.0-rc.12",
+  "version": "1.0.0-rc.11",
   "description": "无界微前端Vue2组件封装",
   "main": "./lib/index.js",
   "module": "./esm/index.js",
@@ -14,6 +14,7 @@
     "esm": "cross-env BABEL_ENV=esm babel index.js --out-dir ./esm --source-maps",
     "prepack": "bash build.sh",
     "start": "cross-env BABEL_ENV=esm babel index.js --out-dir ./esm --source-maps inline --watch",
+    "build": "cross-env BABEL_ENV=esm babel index.js --out-dir ./esm --source-maps inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yiludege",
@@ -29,7 +30,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "wujie": "^1.0.0-rc.12"
+    "wujie": "^1.0.0-rc.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
