--- a/packages/wujie-cli/template/examples/main-react/package.json
+++ b/packages/wujie-cli/template/examples/main-react/package.json
@@ -60,7 +60,7 @@
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1",
-    "wujie-react": "workspace:*"
+    "wujie-react": "^1.0.0-rc.12"
   },
   "scripts": {
     "start": "node scripts/start.js",
