--- a/packages/wujie-cli/template/examples/vue3/package.json
+++ b/packages/wujie-cli/template/examples/vue3/package.json
@@ -30,6 +30,6 @@
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-loader-v16": "^16.0.0-beta.5.4"
+    "vue-loader": "^17.0.0"
   }
 }
