--- a/packages/wujie-cli/template/examples/angular12/package.json
+++ b/packages/wujie-cli/template/examples/angular12/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-rc.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
     "build": "ng build --deploy-url='/demo-angular12/'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
