--- a/packages/wujie-cli/template/examples/react16/package.json
+++ b/packages/wujie-cli/template/examples/react16/package.json
@@ -62,7 +62,7 @@
     "wujie-react": "^1.0.0-rc.13"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
