--- a/packages/wujie-cli/template/examples/react17/package.json
+++ b/packages/wujie-cli/template/examples/react17/package.json
@@ -73,7 +73,7 @@
     "babel-loader": "8.1.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
