--- a/packages/wujie-cli/template/examples/vue3/package.json
+++ b/packages/wujie-cli/template/examples/vue3/package.json
@@ -7,19 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "ant-design-vue": "^2.2.8",
+    "core-js": "^3.8.3",
     "element-plus": "^2.2.6",
-    "vue": "^3.2.37",
+    "ant-design-vue": "^2.2.8",
+    "vue": "^3.2.38",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.17.12",
-    "@babel/plugin-proposal-optional-chaining": "^7.17.12",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "vue-loader": "17.0.0",
-    "@vue/compiler-sfc": "^3.2.37"
+    "@vue/runtime-core": "^3.2.38",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0"
   }
 }
