--- a/packages/wujie-cli/package.json
+++ b/packages/wujie-cli/package.json
@@ -15,6 +15,7 @@
   "repository": "https://github.com/ErKeLost/vite-cli",
   "bugs": "https://github.com/ErKeLost/vite-cli/issues",
   "devDependencies": {
+    "ejs": "^3.1.8",
     "@types/node": "^18.0.0",
     "commander": "^9.3.0",
     "fs-extra": "^10.1.0",
