--- a/packages/wujie-cli/template/package.json
+++ b/packages/wujie-cli/template/package.json
@@ -38,5 +38,8 @@
     "lint-staged": "^12.4.1",
     "rimraf": "^3.0.2",
     "turbo": "1.3.2"
+  },
+  "dependencies": {
+    "prettier": "latest"
   }
 }
