--- a/packages/wujie-cli/package.json
+++ b/packages/wujie-cli/package.json
@@ -24,6 +24,9 @@
     "minimist": "^1.2.6",
     "prompts": "^2.4.2"
   },
+  "dependencies": {
+    "prettier": "latest"
+  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
